--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,17 @@ h1 {
 font-family: 'IBM Plex Sans', sans-serif;
 font-size: 64pt;
 }
+
+.botao {
+  font-family: 'IBM Plex Sans', sans-serif;
+  text-transform: uppercase;
+  background-color: #FBBC3D;
+  color: #FFFFFF;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
