--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ font-size: 64pt;
 color: white;
 }
 
-.botao {
+.botaoamarelo {
   font-family: 'IBM Plex Sans', sans-serif;
   text-transform: uppercase;
   background-color: #FBBC3D;
