--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ background-color: #49A295;
 h1 {
 font-family: 'IBM Plex Sans', sans-serif;
 font-size: 64pt;
-color: white;
+font-color: #FFFFFF;
 }
 
 .botaoamarelo {
