--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ font-size: 64pt;
 font-color: #FFFFFF;
 }
 
-.botaoamarelo {
+.button {
   font-family: 'IBM Plex Sans', sans-serif;
   text-transform: uppercase;
   background-color: #FBBC3D;
