--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,14 @@ font-size: 64pt;
 font-color: #FFFFFF;
 }
 
-.button {
+.bamarelo {
   font-family: 'IBM Plex Sans', sans-serif;
   text-transform: uppercase;
   background-color: #FBBC3D;
+  border-radius: 30px;
   color: #FFFFFF;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
