--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ height: 80%;
 background-color: #49A295;
 }
 
+.faixa {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 80px;
+}
+
 h1 {
 font-family: 'IBM Plex Sans', sans-serif;
 font-size: 64pt;
