--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ font-color: #FFFFFF;
 }
 
 .bamarelo {
-  font-family: 'IBM Plex Sans Bold', sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   text-transform: uppercase;
   background-color: #FBBC3D;
   border: none;
