--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@ width: 100%;
 background-color: #49A295;
 }
 
-.faixa {
-  background-color: #49A295;
+.topo {
+  overflow: hidden;
   position: fixed;
-  top: 0px;
-  left: 0px;
+  background-color: #49A295;
   width: 100%;
   height: 80px;
 }
