--- a/style.css
+++ b/style.css
@@ -1,44 +1,37 @@
-html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
-/* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
-html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
-
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-.body {
-  background-color: #49A295;
+body {
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 
-#caixalanding {
-height: 80%;
-width: 100%;
-background-color: #49A295;
-}
-
-.topo {
+.top {
   overflow: hidden;
-  position: fixed;
-  background-color: #49A295;
+  display: block;
+  background: #49A295;
+  position: absolute;
   width: 100%;
-  height: 80px;
+  top: 0px;
+  right: 0px;
+}
+
+.logo {
+  display: block;
+  padding: 25px;
+  margin: auto;
+  width: 20%;
 }
 
 h1 {
-font-family: 'IBM Plex Sans', sans-serif;
-font-size: 64pt;
-font-color: #FFFFFF;
+  font-family: 'IBM Plex Sans', sans-serif;
+  padding: 30px;
+  font-size: 50pt;
+  text-align: center;
+  color: #ffffff;
 }
 
-.bamarelo {
-  font-family: 'IBM Plex Sans', sans-serif;
-  text-transform: uppercase;
-  background-color: #FBBC3D;
-  border: none;
-  border-radius: 30px;
-  font-color: #FFFFFF;
-  padding: 15px 32px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
+.underline--amarelo {
+  background-image: linear-gradient(120deg, #FBBC3D 0%, #FBBC3D 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  }
