--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 
 body {
   font-family: 'IBM Plex Sans', sans-serif;
+  background: #49A295;
 }
 
 .top {
   overflow: hidden;
   display: block;
-  background: #49A295;
   position: absolute;
   width: 100%;
   top: 0px;
@@ -18,13 +18,13 @@ body {
   display: block;
   padding: 25px;
   margin: auto;
-  width: 20%;
+  width: 30%;
 }
 
 h1 {
   font-family: 'IBM Plex Sans', sans-serif;
-  padding: 30px;
-  font-size: 50pt;
+  padding:30px 50px 10px 50px;
+  font-size: 10vw;
   text-align: center;
   color: #ffffff;
 }
