--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@
 body {
   font-family: 'IBM Plex Sans', sans-serif;
   background: #49A295;
+  position: relative;
 }
 
 .top {
   overflow: hidden;
   display: block;
-  position: absolute;
+  position: relative;
   width: 100%;
   top: 0px;
   right: 0px;
@@ -21,11 +22,44 @@ body {
   width: 30%;
 }
 
+.frase {
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+
+.boxbutoes {
+  position: absolute;
+  display: inline-block;
+  left: 30px;
+  bottom: 50px;
+}
+
+a {
+  text-decoration:none;
+  color: inherit;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration:none;
+}
+
 h1 {
   font-family: 'IBM Plex Sans', sans-serif;
-  padding:30px 50px 10px 50px;
+  padding:30px 50px 0px 50px;
   font-size: 5vw;
-  text-align: center;
+  text-align: left;
+  color: #ffffff;
+}
+
+h3 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 3vw;
+  padding:30px 50px 0px 50px;
+  font-style: italic;
+  font-weight: 200;
+  text-align: left;
   color: #ffffff;
 }
 
@@ -35,3 +69,31 @@ h1 {
   background-size: 100% 0.2em;
   background-position: 0 88%;
   }
+
+.bamarelo {
+  background:#FBBC3D;
+  border-radius: 50px;
+  border: none;
+  padding: 15px 25px 15px 25px;
+  font-family: 'IBM Plex Sans', sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 3vw;
+  color: #ffffff;
+  box-shadow: 2px 2px 8px #45887E;
+}
+
+.bamacontorno {
+  margin-left: 15px;
+  background-color: transparent;
+  border-radius: 50px;
+  border: 3px solid #FBBC3D;
+  padding: 15px 25px 15px 25px;
+  font-family: 'IBM Plex Sans', sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 3vw;
+  color: #FBBC3D;
+  box-shadow: 2px 2px 8px #45887E;
+}
+}
