--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   font-family: 'IBM Plex Sans', sans-serif;
   background: #49A295;
   position: relative;
+  width: 100%;
+  height: auto;
 }
 
 .top {
@@ -58,7 +60,7 @@ h3 {
   font-size: 4vw;
   padding:30px 50px 0px 50px;
   font-style: italic;
-  font-weight: 200;
+  font-weight: 400;
   text-align: left;
   color: #ffffff;
 }
