--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+html, body {
+  min-height: 100/
+}
+
 body {
   font-family: 'IBM Plex Sans', sans-serif;
   background: #49A295;
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .top {
